# xmmutablemap

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/immutable_map_jax/: __init__.py  _core.py
src/xmmutablemap/: __init__.py  _core.py
tests/: test_immutablemap.py  test_package.py
